cms: update About page "user-stories"

--- a/src/pages/about/user-stories.page.mdx
+++ b/src/pages/about/user-stories.page.mdx
@@ -13,7 +13,7 @@ These use cases shall inspire you to think of own scenarios applying the SSHOMP 
 
 ## Lukas Weimer and the Use Case of the Association for Research Infrastructures in the Humanities and Cultural Studies: Managing own Tools and Resources using the Marketplace API
 
-![## Lukas Weimer](/assets/cms/images/1.png){width=250}
+![\## Lukas Weimer]()
 
 ### WHO?
 
@@ -25,7 +25,7 @@ Lukas utilizes the SSH Open Marketplace as part of his work with the [Associatio
 
 The Marketplace’s curation process, overseen by its editorial board, guarantees the quality and reliability of listed resources. Its distributed model allows each institution to manage and update its own entries, making it a flexible and efficient solution. For researchers, the Marketplace offers a wealth of tools and services, enabling them to find resources tailored to their needs. Lukas highlights the dual benefit: it simplifies administrative processes while supporting researchers in addressing diverse academic questions.
 
-![SSHOMP interface showing GKFI e.V. entries](/assets/cms/images/2.png)
+![SSHOMP interface showing GKFI e.V. entries]()
 
 ### OUTLOOK
 
@@ -36,15 +36,11 @@ Lukas sees the SSH Open Marketplace as a valuable tool for both infrastructure p
 
 These enhancements could further streamline workflows and improve user satisfaction. Lukas emphasizes the Marketplace’s potential to unify diverse institutions and their offerings, fostering collaboration and maximizing outreach. With continuous improvements, the SSH Open Marketplace can solidify its role as an indispensable resource for the research community.
 
-
-
 ## [](<>)Paola Marongiu and the Use Case of creating a new CLARIN Resource Family for Lexical Semantic Change Research : Creating structured Workflows using the Marketplace
 
 ### [](<>)WHO?
 
-
-
-![## Paola Marongiu](/assets/cms/images/marongiu.png)
+![## Paola Marongiu]()
 
 Paola Marongiu is a researcher with a background in computational linguistics, particularly in historical languages, specifically Latin. She began engaging with digital methods during her MA, which focused on converting the _[Index Thomisticus Treebank](https://itreebank.marginalia.it/)_ to Universal Dependencies. She deepened her expertise in her PhD, where she joined the _[WoPoss](https://woposs.unine.ch/)_ project activities, mainly focussing on the linguistic annotation of a selection of modal markers in a diachronic corpus of Latin literary and documentary texts. Her research experience includes corpus building, automatic annotation tools, and data analysis with Python and R. She has also worked with word embeddings to study semantic shift in Latin and is currently involved in a project on Justinian's Digest at the _[Institute of Computational Linguistics of the Italian Research Council](https://www.ilc.cnr.it/en/)_, where she is developing a bilingual glossary of legal Latin terms.
 
@@ -52,7 +48,7 @@ Paola Marongiu is a researcher with a background in computational linguistics, p
 
 Paola discovered the SSH Open Marketplace through her involvement in the _[CLARIN](https://www.clarin.eu/)_-funded project ‘_[A new CLARIN Resource Family for lexical semantic change research](https://zenodo.org/records/8156200)_,’ where she worked as a research assistant. The project aimed to create a new resource family within the CLARIN infrastructure, and during the initial survey of available resources, she discovered the SSH Open Marketplace workflows. Recognizing their potential, they adapted their project model to align with these workflows. She has primarily used the SSH Open Marketplace to create structured workflows for lexical semantic change research, linking CLARIN resources to specific steps that lexicographers and researchers can follow. Notable workflows she developed include _[‘Semantic change analysis for lexicological studies’](https://marketplace.sshopencloud.eu/workflow/yStoh2)_ and _[‘Semantic change analysis for Ancient Greek lexicological studies.’](https://marketplace.sshopencloud.eu/workflow/UVbKn2)_ These workflows help guide users through the process of retrieving semantic shifts using computational tools.
 
-![A SSHOMP entry](/assets/cms/images/marongiu2.png)
+![A SSHOMP entry]()
 
 ### [](<>)OUTLOOK
 
@@ -66,14 +62,11 @@ _[https://orcid.org/0000-0002-5060-3307](https://orcid.org/0000-0002-5060-3307)_
 
 _[https://x.com/paolamarongiu_](https://x.com/paolamarongiu_)_
 
-### \
-[](<>)Alex Steckel and the Use Case of Text+: Marketplace as Curation Platform and harvestable Aggregator
+## [](<>)Alex Steckel and the Use Case of Text+: Marketplace as Curation Platform and harvestable Aggregator
 
 ### [](<>)WHO?
 
-
-
-![Alex Steckel](/assets/cms/images/steckel1.png)
+![Alex Steckel]()
 
 Alex Steckel is a professional dedicated to bridging the gap between researchers and digital infrastructure. While not a Digital Humanities (DH) researcher himself, he plays a crucial role in making DH tools more accessible to researchers. His work focuses on facilitating the integration of digital services into academic workflows, particularly in the context of the _[German NFDI (National Research Data Infrastructure)](https://www.nfdi.de/)_ consortium _[Text+](https://text-plus.org/)_. His expertise lies in understanding the conceptual framework of digital research tools and ensuring that researchers can easily find and utilize the resources they need.
 
@@ -83,17 +76,15 @@ Alex first encountered the SSH Open Marketplace through a colleague, who introdu
 
 The SSH Open Marketplace provides a crucial function for Alex and his team at Text+. Instead of creating a separate catalog from scratch, which would require significant resources, they rely on the Marketplace’s existing structure and API to curate relevant tools for their research community. This integration has allowed them to efficiently list their services while ensuring greater visibility across Europe. The Marketplace acts as a central hub where researchers can discover, access, and benefit from a wide range of digital tools, making their research processes more efficient and streamlined. The ease of integration has significantly reduced their workload, requiring only about 20% of the effort compared to building an independent solution.
 
-![Text+ catalogue](/assets/cms/images/steckel2.png)
+![Text+ catalogue]()
 
 ### [](<>)OUTLOOK
 
 Alex is highly satisfied with the SSH Open Marketplace and appreciates its role in simplifying the dissemination of research tools. However, he sees room for improvement. Enhancing metadata features, such as displaying the last update timestamps, could improve transparency and reliability. Additionally, incorporating a rating or ranking system would help users assess the quality and relevance of listed tools. These improvements would further refine the user experience and make the Marketplace an even more valuable resource for the research community.
 
-
-
 ## [](<>)Olivier Marlet and the use case of MASAplus: Resource Sharing in the Field of Archaeology
 
-![Olivier Marlet](/assets/cms/images/marlet1.png)
+![Olivier Marlet]()
 
 ### [](<>)WHO?
 
