--- a/src/pages/about/user-stories.page.mdx
+++ b/src/pages/about/user-stories.page.mdx
@@ -13,8 +13,6 @@ These use cases shall inspire you to think of own scenarios applying the SSHOMP 
 
 ## Lukas Weimer and the Use Case of the Association for Research Infrastructures in the Humanities and Cultural Studies: Managing own Tools and Resources using the Marketplace API
 
-![\## Lukas Weimer]()
-
 ### WHO?
 
 Lukas Weimer is a German philologist with a strong background in the humanities. His journey into digital methods began during his studies at the University of Würzburg, where he worked as a student assistant at the [Chair of Computer Philology](https://www.caidas.uni-wuerzburg.de/research-groups/computer-philology/), a hub for Digital Humanities. Despite his initial lack of formal training in digital methods, Lukas embraced the field, learning on the job and eventually completing his PhD. Today, he contributes to research infrastructure development through his role at the Göttingen State and University Library, focusing on projects like [DARIAH-DE](https://de.dariah.eu/), [Text+](https://text-plus.org/), and [Base4NFDI](https://base4nfdi.de/). His experience in the field is complemented by his perspective as a researcher and infrastructure provider.
@@ -24,8 +22,6 @@ Lukas Weimer is a German philologist with a strong background in the humanities.
 Lukas utilizes the SSH Open Marketplace as part of his work with the [Association for Research Infrastructures in the Humanities and Cultural Studies](http://forschungsinfrastrukturen.de/doku.php/start). The Marketplace serves as a centralized platform for listing and managing tools, services, and resources contributed by the association’s members. By leveraging the Marketplace’s API, the association can automate the [integration of its resources into its website](http://forschungsinfrastrukturen.de/doku.php/angebotskatalog), eliminating the need for manual updates. This functionality not only saves time but also ensures accuracy and accessibility.
 
 The Marketplace’s curation process, overseen by its editorial board, guarantees the quality and reliability of listed resources. Its distributed model allows each institution to manage and update its own entries, making it a flexible and efficient solution. For researchers, the Marketplace offers a wealth of tools and services, enabling them to find resources tailored to their needs. Lukas highlights the dual benefit: it simplifies administrative processes while supporting researchers in addressing diverse academic questions.
-
-![SSHOMP interface showing GKFI e.V. entries]()
 
 ### OUTLOOK
 
@@ -38,19 +34,15 @@ These enhancements could further streamline workflows and improve user satisfact
 
 ## [](<>)Paola Marongiu and the Use Case of creating a new CLARIN Resource Family for Lexical Semantic Change Research : Creating structured Workflows using the Marketplace
 
-### [](<>)WHO?
 
-![## Paola Marongiu]()
+
+### [](<>)WHO?
 
 Paola Marongiu is a researcher with a background in computational linguistics, particularly in historical languages, specifically Latin. She began engaging with digital methods during her MA, which focused on converting the _[Index Thomisticus Treebank](https://itreebank.marginalia.it/)_ to Universal Dependencies. She deepened her expertise in her PhD, where she joined the _[WoPoss](https://woposs.unine.ch/)_ project activities, mainly focussing on the linguistic annotation of a selection of modal markers in a diachronic corpus of Latin literary and documentary texts. Her research experience includes corpus building, automatic annotation tools, and data analysis with Python and R. She has also worked with word embeddings to study semantic shift in Latin and is currently involved in a project on Justinian's Digest at the _[Institute of Computational Linguistics of the Italian Research Council](https://www.ilc.cnr.it/en/)_, where she is developing a bilingual glossary of legal Latin terms.
 
 ### [](<>)THE CASE
 
-Paola discovered the SSH Open Marketplace through her involvement in the _[CLARIN](https://www.clarin.eu/)_-funded project ‘_[A new CLARIN Resource Family for lexical semantic change research](https://zenodo.org/records/8156200)_,’ where she worked as a research assistant. The project aimed to create a new resource family within the CLARIN infrastructure, and during the initial survey of available resources, she discovered the SSH Open Marketplace workflows. Recognizing their potential, they adapted their project model to align with these workflows. She has primarily used the SSH Open Marketplace to create structured workflows for lexical semantic change research, linking CLARIN resources to specific steps that lexicographers and researchers can follow. Notable workflows she developed include _[‘Semantic change analysis for lexicological studies’](https://marketplace.sshopencloud.eu/workflow/yStoh2)_ and _[‘Semantic change analysis for Ancient Greek lexicological studies.’](https://marketplace.sshopencloud.eu/workflow/UVbKn2)_ These workflows help guide users through the process of retrieving semantic shifts using computational tools.
-
-![A SSHOMP entry]()
-
-### [](<>)OUTLOOK
+Paola discovered the SSH Open Marketplace through her involvement in the _[CLARIN](https://www.clarin.eu/)_-funded project ‘_[A new CLARIN Resource Family for lexical semantic change research](https://zenodo.org/records/8156200)_,’ where she worked as a research assistant. The project aimed to create a new resource family within the CLARIN infrastructure, and during the initial survey of available resources, she discovered the SSH Open Marketplace workflows. Recognizing their potential, they adapted their project model to align with these workflows. She has primarily used the SSH Open Marketplace to create structured workflows for lexical semantic change research, linking CLARIN resources to specific steps that lexicographers and researchers can follow. Notable workflows she developed include _[‘Semantic change analysis for lexicological studies’](https://marketplace.sshopencloud.eu/workflow/yStoh2)_ and _[‘Semantic change analysis for Ancient Greek lexicological studies.’](https://marketplace.sshopencloud.eu/workflow/UVbKn2)_ These workflows help guide users through the process of retrieving semantic shifts using computational toolsOUTLOOK
 
 Paola sees the SSH Open Marketplace as an essential resource for researchers, particularly those new to digital and computational methods. She values its extensive collection of workflows, training materials, datasets, publications, and tools, which provide step-by-step guidance for various research tasks. She highlights the platform’s search functionality as particularly beneficial for finding relevant resources efficiently. She envisions the SSH Open Marketplace continuing to serve as a bridge between different infrastructures and disciplines, fostering accessibility and collaboration in digital humanities research. She believes its structured workflows will be instrumental in helping scholars navigate complex research tasks more effectively.
 
@@ -60,13 +52,15 @@ _[https://www.researchgate.net/profile/Paola-Marongiu-2](https://www.researchgat
 
 _[https://orcid.org/0000-0002-5060-3307](https://orcid.org/0000-0002-5060-3307)_
 
-_[https://x.com/paolamarongiu_](https://x.com/paolamarongiu_)_
+_[https://x.com/paolamarongiu](https://x.com/paolamarongiu)_
+
+
 
 ## [](<>)Alex Steckel and the Use Case of Text+: Marketplace as Curation Platform and harvestable Aggregator
 
-### [](<>)WHO?
 
-![Alex Steckel]()
+
+### [](<>)WHO?
 
 Alex Steckel is a professional dedicated to bridging the gap between researchers and digital infrastructure. While not a Digital Humanities (DH) researcher himself, he plays a crucial role in making DH tools more accessible to researchers. His work focuses on facilitating the integration of digital services into academic workflows, particularly in the context of the _[German NFDI (National Research Data Infrastructure)](https://www.nfdi.de/)_ consortium _[Text+](https://text-plus.org/)_. His expertise lies in understanding the conceptual framework of digital research tools and ensuring that researchers can easily find and utilize the resources they need.
 
@@ -74,19 +68,15 @@ Alex first encountered the SSH Open Marketplace through a colleague, who introdu
 
 ### [](<>)THE CASE
 
-The SSH Open Marketplace provides a crucial function for Alex and his team at Text+. Instead of creating a separate catalog from scratch, which would require significant resources, they rely on the Marketplace’s existing structure and API to curate relevant tools for their research community. This integration has allowed them to efficiently list their services while ensuring greater visibility across Europe. The Marketplace acts as a central hub where researchers can discover, access, and benefit from a wide range of digital tools, making their research processes more efficient and streamlined. The ease of integration has significantly reduced their workload, requiring only about 20% of the effort compared to building an independent solution.
-
-![Text+ catalogue]()
-
-### [](<>)OUTLOOK
+The SSH Open Marketplace provides a crucial function for Alex and his team at Text+. Instead of creating a separate catalog from scratch, which would require significant resources, they rely on the Marketplace’s existing structure and API to curate relevant tools for their research community. This integration has allowed them to efficiently list their services while ensuring greater visibility across Europe. The Marketplace acts as a central hub where researchers can discover, access, and benefit from a wide range of digital tools, making their research processes more efficient and streamlined. The ease of integration has significantly reduced their workload, requiring only about 20% of the effort compared to building an independent solutionOUTLOOK
 
 Alex is highly satisfied with the SSH Open Marketplace and appreciates its role in simplifying the dissemination of research tools. However, he sees room for improvement. Enhancing metadata features, such as displaying the last update timestamps, could improve transparency and reliability. Additionally, incorporating a rating or ranking system would help users assess the quality and relevance of listed tools. These improvements would further refine the user experience and make the Marketplace an even more valuable resource for the research community.
 
-## [](<>)Olivier Marlet and the use case of MASAplus: Resource Sharing in the Field of Archaeology
 
-![Olivier Marlet]()
 
-### [](<>)WHO?
+## [](<>)Olivier Marlet and the use case of MASAplus: Resource Sharing in the Field of Archaeolog
+
+### WHO?
 
 Olivier Marlet is part of the Consortium-HN MASAplus, which is involved in archaeological data management and the promotion of best digital practices for sharing and reusing archaeological data. MASAplus operates within the context of Open Science and advocates for Linked Open Data in the archaeological community. MASAplus brings together various experts in digital archaeology, with a background in archiving, document management, vocabulary, spatialization, publication, and promoting data openness. They have experience in developing and supporting the tools and workflows that make up the MASAplus digital ecosystem.
 
