content: fix md

--- a/src/pages/about/user-stories.page.mdx
+++ b/src/pages/about/user-stories.page.mdx
@@ -7,7 +7,7 @@ toc: false
 ---
 The SSH Open Marketplace (SSHOMP) provides a valuable service to both researchers and infrastructure operators. It can be used in a variety of contexts, just as its users have different training backgrounds, requirements and approaches to incorporating SSHOMP into their work. On this page we present real use cases and the faces behind them.
 
-These use cases shall inspire you to think of own scenarios applying the SSHOMP reaching beyond its use as a resource sharing platform. Please get in touch with us if you have an use case in mind for the SSHOMP contributing to your research work or to your community. Let’s discuss how we could make it work.
+These use cases shall inspire you to think of own scenarios applying the SSHOMP reaching beyond its use as a resource sharing platform. Please get in touch with us if you have an use case in mind for the SSHOMP contributing to your research work or to your community. Let's discuss how we could make it work.
 
 ## Lukas Weimer and the Use Case of the Association for Research Infrastructures in the Humanities and Cultural Studies: Managing own Tools and Resources using the Marketplace API
 
@@ -17,9 +17,9 @@ Lukas Weimer is a German philologist with a strong background in the humanities.
 
 ### The case
 
-Lukas utilizes the SSH Open Marketplace as part of his work with the [Association for Research Infrastructures in the Humanities and Cultural Studies](http://forschungsinfrastrukturen.de/doku.php/start). The Marketplace serves as a centralized platform for listing and managing tools, services, and resources contributed by the association’s members. By leveraging the Marketplace’s API, the association can automate the [integration of its resources into its website](http://forschungsinfrastrukturen.de/doku.php/angebotskatalog), eliminating the need for manual updates. This functionality not only saves time but also ensures accuracy and accessibility.
+Lukas utilizes the SSH Open Marketplace as part of his work with the [Association for Research Infrastructures in the Humanities and Cultural Studies](http://forschungsinfrastrukturen.de/doku.php/start). The Marketplace serves as a centralized platform for listing and managing tools, services, and resources contributed by the association's members. By leveraging the Marketplace's API, the association can automate the [integration of its resources into its website](http://forschungsinfrastrukturen.de/doku.php/angebotskatalog), eliminating the need for manual updates. This functionality not only saves time but also ensures accuracy and accessibility.
 
-The Marketplace’s curation process, overseen by its editorial board, guarantees the quality and reliability of listed resources. Its distributed model allows each institution to manage and update its own entries, making it a flexible and efficient solution. For researchers, the Marketplace offers a wealth of tools and services, enabling them to find resources tailored to their needs. Lukas highlights the dual benefit: it simplifies administrative processes while supporting researchers in addressing diverse academic questions.
+The Marketplace's curation process, overseen by its editorial board, guarantees the quality and reliability of listed resources. Its distributed model allows each institution to manage and update its own entries, making it a flexible and efficient solution. For researchers, the Marketplace offers a wealth of tools and services, enabling them to find resources tailored to their needs. Lukas highlights the dual benefit: it simplifies administrative processes while supporting researchers in addressing diverse academic questions.
 
 ### Outlook
 
@@ -28,9 +28,9 @@ Lukas sees the SSH Open Marketplace as a valuable tool for both infrastructure p
 - Adding clear indicators for when an entry was last updated to improve transparency.
 - Implementing a feedback loop to notify contributors about the status of their entries (e.g., approval or rejection).
 
-These enhancements could further streamline workflows and improve user satisfaction. Lukas emphasizes the Marketplace’s potential to unify diverse institutions and their offerings, fostering collaboration and maximizing outreach. With continuous improvements, the SSH Open Marketplace can solidify its role as an indispensable resource for the research community.
+These enhancements could further streamline workflows and improve user satisfaction. Lukas emphasizes the Marketplace's potential to unify diverse institutions and their offerings, fostering collaboration and maximizing outreach. With continuous improvements, the SSH Open Marketplace can solidify its role as an indispensable resource for the research community.
 
-## Paola Marongiu and the Use Case of creating a new CLARIN Resource Family for Lexical Semantic Change Research : Creating structured Workflows using the Marketplace
+## Paola Marongiu and the Use Case of creating a new CLARIN Resource Family for Lexical Semantic Change Research: Creating structured Workflows using the Marketplace
 
 ### Who?
 
@@ -38,11 +38,11 @@ Paola Marongiu is a researcher with a background in computational linguistics, p
 
 ### The case
 
-Paola discovered the SSH Open Marketplace through her involvement in the _[CLARIN](https://www.clarin.eu/)_-funded project ‘_[A new CLARIN Resource Family for lexical semantic change research](https://zenodo.org/records/8156200)_,’ where she worked as a research assistant. The project aimed to create a new resource family within the CLARIN infrastructure, and during the initial survey of available resources, she discovered the SSH Open Marketplace workflows. Recognizing their potential, they adapted their project model to align with these workflows. She has primarily used the SSH Open Marketplace to create structured workflows for lexical semantic change research, linking CLARIN resources to specific steps that lexicographers and researchers can follow. Notable workflows she developed include _[‘Semantic change analysis for lexicological studies’](https://marketplace.sshopencloud.eu/workflow/yStoh2)_ and _[‘Semantic change analysis for Ancient Greek lexicological studies.’](https://marketplace.sshopencloud.eu/workflow/UVbKn2)_ These workflows help guide users through the process of retrieving semantic shifts using computational toolsOUTLOOK
+Paola discovered the SSH Open Marketplace through her involvement in the _[CLARIN](https://www.clarin.eu/)_-funded project _['A new CLARIN Resource Family for lexical semantic change research'](https://zenodo.org/records/8156200)_, where she worked as a research assistant. The project aimed to create a new resource family within the CLARIN infrastructure, and during the initial survey of available resources, she discovered the SSH Open Marketplace workflows. Recognizing their potential, they adapted their project model to align with these workflows. She has primarily used the SSH Open Marketplace to create structured workflows for lexical semantic change research, linking CLARIN resources to specific steps that lexicographers and researchers can follow. Notable workflows she developed include _['Semantic change analysis for lexicological studies'](https://marketplace.sshopencloud.eu/workflow/yStoh2)_ and _['Semantic change analysis for Ancient Greek lexicological studies'](https://marketplace.sshopencloud.eu/workflow/UVbKn2)_. These workflows help guide users through the process of retrieving semantic shifts using computational tools.
 
-Paola sees the SSH Open Marketplace as an essential resource for researchers, particularly those new to digital and computational methods. She values its extensive collection of workflows, training materials, datasets, publications, and tools, which provide step-by-step guidance for various research tasks. She highlights the platform’s search functionality as particularly beneficial for finding relevant resources efficiently. She envisions the SSH Open Marketplace continuing to serve as a bridge between different infrastructures and disciplines, fostering accessibility and collaboration in digital humanities research. She believes its structured workflows will be instrumental in helping scholars navigate complex research tasks more effectively.
+Paola sees the SSH Open Marketplace as an essential resource for researchers, particularly those new to digital and computational methods. She values its extensive collection of workflows, training materials, datasets, publications, and tools, which provide step-by-step guidance for various research tasks. She highlights the platform's search functionality as particularly beneficial for finding relevant resources efficiently. She envisions the SSH Open Marketplace continuing to serve as a bridge between different infrastructures and disciplines, fostering accessibility and collaboration in digital humanities research. She believes its structured workflows will be instrumental in helping scholars navigate complex research tasks more effectively.
 
-### Paola’s profiles
+### Paola's profiles
 
 _[https://www.researchgate.net/profile/Paola-Marongiu-2](https://www.researchgate.net/profile/Paola-Marongiu-2)_
 
@@ -60,7 +60,7 @@ Alex first encountered the SSH Open Marketplace through a colleague, who introdu
 
 ### The case
 
-The SSH Open Marketplace provides a crucial function for Alex and his team at Text+. Instead of creating a separate catalog from scratch, which would require significant resources, they rely on the Marketplace’s existing structure and API to curate relevant tools for their research community. This integration has allowed them to efficiently list their services while ensuring greater visibility across Europe. The Marketplace acts as a central hub where researchers can discover, access, and benefit from a wide range of digital tools, making their research processes more efficient and streamlined. The ease of integration has significantly reduced their workload, requiring only about 20% of the effort compared to building an independent solution.
+The SSH Open Marketplace provides a crucial function for Alex and his team at Text+. Instead of creating a separate catalog from scratch, which would require significant resources, they rely on the Marketplace's existing structure and API to curate relevant tools for their research community. This integration has allowed them to efficiently list their services while ensuring greater visibility across Europe. The Marketplace acts as a central hub where researchers can discover, access, and benefit from a wide range of digital tools, making their research processes more efficient and streamlined. The ease of integration has significantly reduced their workload, requiring only about 20% of the effort compared to building an independent solution.
 
 Alex is highly satisfied with the SSH Open Marketplace and appreciates its role in simplifying the dissemination of research tools. However, he sees room for improvement. Enhancing metadata features, such as displaying the last update timestamps, could improve transparency and reliability. Additionally, incorporating a rating or ranking system would help users assess the quality and relevance of listed tools. These improvements would further refine the user experience and make the Marketplace an even more valuable resource for the research community.
 
