cms: update About page "user-stories"

--- a/src/pages/about/user-stories.page.mdx
+++ b/src/pages/about/user-stories.page.mdx
@@ -11,9 +11,17 @@ These use cases shall inspire you to think of own scenarios applying the SSHOMP 
 
 ## Lukas Weimer and the Use Case of the Association for Research Infrastructures in the Humanities and Cultural Studies: Managing own Tools and Resources using the Marketplace API
 
+
+
+<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'repeat(3, 1fr)' }}>
+
+![Lukas Weimer](/assets/cms/images/1.png)
+
+</div>
+
+
+
 ### Who?
-
-
 
 Lukas Weimer is a German philologist with a strong background in the humanities. His journey into digital methods began during his studies at the University of Würzburg, where he worked as a student assistant at the [Chair of Computer Philology](https://www.caidas.uni-wuerzburg.de/research-groups/computer-philology/), a hub for Digital Humanities. Despite his initial lack of formal training in digital methods, Lukas embraced the field, learning on the job and eventually completing his PhD. Today, he contributes to research infrastructure development through his role at the Göttingen State and University Library, focusing on projects like [DARIAH-DE](https://de.dariah.eu/), [Text+](https://text-plus.org/), and [Base4NFDI](https://base4nfdi.de/). His experience in the field is complemented by his perspective as a researcher and infrastructure provider.
 
