cms: update About page "user-stories"

--- a/src/pages/about/user-stories.page.mdx
+++ b/src/pages/about/user-stories.page.mdx
@@ -11,15 +11,11 @@ These use cases shall inspire you to think of own scenarios applying the SSHOMP 
 
 ## Lukas Weimer and the Use Case of the Association for Research Infrastructures in the Humanities and Cultural Studies: Managing own Tools and Resources using the Marketplace API
 
-
-
 <div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'repeat(3, 1fr)' }}>
 
 ![Lukas Weimer](/assets/cms/images/1.png)
 
 </div>
-
-
 
 ### Who?
 
@@ -30,6 +26,12 @@ Lukas Weimer is a German philologist with a strong background in the humanities.
 Lukas utilizes the SSH Open Marketplace as part of his work with the [Association for Research Infrastructures in the Humanities and Cultural Studies](http://forschungsinfrastrukturen.de/doku.php/start). The Marketplace serves as a centralized platform for listing and managing tools, services, and resources contributed by the association's members. By leveraging the Marketplace's API, the association can automate the [integration of its resources into its website](http://forschungsinfrastrukturen.de/doku.php/angebotskatalog), eliminating the need for manual updates. This functionality not only saves time but also ensures accuracy and accessibility.
 
 The Marketplace's curation process, overseen by its editorial board, guarantees the quality and reliability of listed resources. Its distributed model allows each institution to manage and update its own entries, making it a flexible and efficient solution. For researchers, the Marketplace offers a wealth of tools and services, enabling them to find resources tailored to their needs. Lukas highlights the dual benefit: it simplifies administrative processes while supporting researchers in addressing diverse academic questions.
+
+<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'repeat(3, 1fr)' }}>
+
+![](/assets/cms/images/2.png)
+
+</div>
 
 ### Outlook
 
@@ -42,6 +44,14 @@ These enhancements could further streamline workflows and improve user satisfact
 
 ## Paola Marongiu and the Use Case of creating a new CLARIN Resource Family for Lexical Semantic Change Research: Creating structured Workflows using the Marketplace
 
+
+
+<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'repeat(3, 1fr)' }}>
+
+![](/assets/cms/images/marongiu.png)
+
+</div>
+
 ### Who?
 
 Paola Marongiu is a researcher with a background in computational linguistics, particularly in historical languages, specifically Latin. She began engaging with digital methods during her MA, which focused on converting the _[Index Thomisticus Treebank](https://itreebank.marginalia.it/)_ to Universal Dependencies. She deepened her expertise in her PhD, where she joined the _[WoPoss](https://woposs.unine.ch/)_ project activities, mainly focussing on the linguistic annotation of a selection of modal markers in a diachronic corpus of Latin literary and documentary texts. Her research experience includes corpus building, automatic annotation tools, and data analysis with Python and R. She has also worked with word embeddings to study semantic shift in Latin and is currently involved in a project on Justinian's Digest at the _[Institute of Computational Linguistics of the Italian Research Council](https://www.ilc.cnr.it/en/)_, where she is developing a bilingual glossary of legal Latin terms.
@@ -52,6 +62,12 @@ Paola discovered the SSH Open Marketplace through her involvement in the _[CLARI
 
 Paola sees the SSH Open Marketplace as an essential resource for researchers, particularly those new to digital and computational methods. She values its extensive collection of workflows, training materials, datasets, publications, and tools, which provide step-by-step guidance for various research tasks. She highlights the platform's search functionality as particularly beneficial for finding relevant resources efficiently. She envisions the SSH Open Marketplace continuing to serve as a bridge between different infrastructures and disciplines, fostering accessibility and collaboration in digital humanities research. She believes its structured workflows will be instrumental in helping scholars navigate complex research tasks more effectively.
 
+<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'repeat(3, 1fr)' }}>
+
+![](/assets/cms/images/marongiu2.png)
+
+</div>
+
 ### Paola's profiles
 
 _[https://www.researchgate.net/profile/Paola-Marongiu-2](https://www.researchgate.net/profile/Paola-Marongiu-2)_
@@ -60,7 +76,17 @@ _[https://orcid.org/0000-0002-5060-3307](https://orcid.org/0000-0002-5060-3307)_
 
 _[https://x.com/paolamarongiu](https://x.com/paolamarongiu)_
 
+
+
 ## Alex Steckel and the Use Case of Text+: Marketplace as Curation Platform and harvestable Aggregator
+
+
+
+<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'repeat(3, 1fr)' }}>
+
+![](/assets/cms/images/steckel1.png)
+
+</div>
 
 ### Who?
 
@@ -74,7 +100,21 @@ The SSH Open Marketplace provides a crucial function for Alex and his team at Te
 
 Alex is highly satisfied with the SSH Open Marketplace and appreciates its role in simplifying the dissemination of research tools. However, he sees room for improvement. Enhancing metadata features, such as displaying the last update timestamps, could improve transparency and reliability. Additionally, incorporating a rating or ranking system would help users assess the quality and relevance of listed tools. These improvements would further refine the user experience and make the Marketplace an even more valuable resource for the research community.
 
+<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'repeat(3, 1fr)' }}>
+
+![](/assets/cms/images/steckel2.png)
+
+</div>
+
+
+
 ## Olivier Marlet and the use case of MASAplus: Resource Sharing in the Field of Archaeology
+
+
+
+![](/assets/cms/images/marlet1.png)
+
+</div>
 
 ### Who?
 
@@ -93,6 +133,8 @@ Olivier describes their involvement with SSH Open Marketplace (SSHOMP) as a key 
 
   - Visibility and International Reach: SSHOMP offers a way for the tools and workflows created by MASAplus to gain international visibility. The existence of this platform has allowed the consortium to expand its reach and make its resources known to a larger audience.
   - Integration of Resources: The interviewee highlights that SSHOMP makes it easy to integrate different resources with persistent identifiers (such as ARK or DOI), allowing these resources to be tracked, shared, and reused across various platforms.
+
+</div>
 
 ### Outlook
 
