cms: update About page "user-stories"

--- a/src/pages/about/user-stories.page.mdx
+++ b/src/pages/about/user-stories.page.mdx
@@ -44,8 +44,6 @@ These enhancements could further streamline workflows and improve user satisfact
 
 ## Paola Marongiu and the Use Case of creating a new CLARIN Resource Family for Lexical Semantic Change Research: Creating structured Workflows using the Marketplace
 
-
-
 <div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'repeat(3, 1fr)' }}>
 
 ![](/assets/cms/images/marongiu.png)
@@ -76,8 +74,6 @@ _[https://orcid.org/0000-0002-5060-3307](https://orcid.org/0000-0002-5060-3307)_
 
 _[https://x.com/paolamarongiu](https://x.com/paolamarongiu)_
 
-
-
 ## Alex Steckel and the Use Case of Text+: Marketplace as Curation Platform and harvestable Aggregator
 
 
@@ -106,11 +102,11 @@ Alex is highly satisfied with the SSH Open Marketplace and appreciates its role 
 
 </div>
 
-
-
 ## Olivier Marlet and the use case of MASAplus: Resource Sharing in the Field of Archaeology
 
 
+
+<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'repeat(3, 1fr)' }}>
 
 ![](/assets/cms/images/marlet1.png)
 
@@ -133,8 +129,6 @@ Olivier describes their involvement with SSH Open Marketplace (SSHOMP) as a key 
 
   - Visibility and International Reach: SSHOMP offers a way for the tools and workflows created by MASAplus to gain international visibility. The existence of this platform has allowed the consortium to expand its reach and make its resources known to a larger audience.
   - Integration of Resources: The interviewee highlights that SSHOMP makes it easy to integrate different resources with persistent identifiers (such as ARK or DOI), allowing these resources to be tracked, shared, and reused across various platforms.
-
-</div>
 
 ### Outlook
 
