cms: update About page "user-stories"

--- a/src/pages/about/user-stories.page.mdx
+++ b/src/pages/about/user-stories.page.mdx
@@ -3,7 +3,7 @@ title: SSH Open Marketplace Stories
 navigationMenu:
   title: User stories
   position: 8
-toc: false
+toc: true
 ---
 The SSH Open Marketplace (SSHOMP) provides a valuable service to both researchers and infrastructure operators. It can be used in a variety of contexts, just as its users have different training backgrounds, requirements and approaches to incorporating SSHOMP into their work. On this page we present real use cases and the faces behind them.
 
